<resources>
    <string name="app_name">PixelFit</string>

    <!-- Avatar dropdown menu strings -->
    <string name="avatar_icon">Profile</string>
    <string name="avatar_dropdown_item1">Profile</string>
    <string name="avatar_dropdown_item2">Goals &amp; Trophies</string>
    <string name="avatar_dropdown_item3">Block List</string>
    <string name="avatar_dropdown_item4">Pending Duels</string>
    <string name="avatar_dropdown_item5">Settings</string>

    <!-- Bottom Navigation headers -->
    <string name="header_Home">Home</string>
    <string name="header_Add">Add</string>
    <string name="header_Instructor">Instruct</string>
    <string name="header_Finder">Find</string>


    <string name="previous">Previous</string>
    <string name="board">Community Board</string>

    <!-- Fitness content headers -->

    <string name="info_header_worked_on">What you worked on:</string>
    <string name="info_header_calories_burned">Calories burned:</string>
    <string name="info_header_time_spent_total">Time spent exercising:</string>

    <!-- Title & description placeholders -->
    <string name="title">Title</string>
    <string name="body">Description</string>
    <string name="buttonAccept">Accept</string>
    <string name="buttonDecline">Decline</string>


    <!-- Speakable text -->

    <string name="description_fitness_nav_button1">Navigate to Instruction tab</string>
    <string name="description_fitness_nav_button2">Navigate to Fitness Home Screen</string>
    <string name="description_fitness_nav_button3">Navigate to Add/Search Users</string>
    <string name="description_fitness_nav_button4">Navigate to Group Finder</string>
    <!-- TODO: Make model description read from a list of parts worked on -->
    <string name="description_fitness_parts_model">Model displaying the parts of the body exercised:</string>
    <string name="description_clock_placeholder">Clock placeholder graphic</string>
    <string name="description_emoji_placeholder">Clock placeholder graphic</string>
    <string name="description_user_avatar_icon">User avatar icon</string>
    <string name="description_goal_assessment_icon">Graphic showing how well the user is doing</string>


    <!-- Presentation text -->
    <string name="presentation_calories_burned">0\nKCals!</string>
    <string name="presentation_worked_on">None</string>
    <string name="presentation_time_spent">0 hour\n0 minutes!</string>


    <!-- Login and sign up text -->
    <string name="login_header">Login</string>
    <string name="login_text">Login</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="name_input">Enter Your Name</string>
    <string name="email_input_text">Enter Your Email</string>
    <string name="username_input">Enter Your Username</string>
    <string name="password_input_text">Enter Your Password</string>
    <string name="reenter_password_input_text">Re Enter Your Password</string>
    <string name="back_button">Back Button</string>
    <string name="next">Next</string>

    <!-- Room finder text -->
    <string name="room_header">Room Finder</string>

    <!-- Fragment labels -->
    <string name="Home_fragment_label">HomeFragment</string>
    <string name="Login_fragment_label">LogInFragment</string>

    <string name="friends">Add Friends fragment</string>
    <string name="groups">Group Finder fragment</string>
    <string name="instructor">Instructor fragment</string>
    <string name="settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Settings Text -->
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Change Username Text -->
    <string name="change_your_username">Change Your Username</string>
    <string name="save">Save</string>

    <!-- Profile Fragment Text -->
    <string name="edit_profile">Edit Profile</string>
    <string name="bio_text">This is the user bio. Here you can write about yourself.</string>
    <string name="profile_image_description">Profile Picture</string>
    <string name="username">Username</string>
    <string name="height_label">Height</string>
    <string name="height_value">Value</string>
    <string name="weight_label">Weight</string>
    <string name="weight_value">Value</string>
    <string name="sex_label">Gender</string>
    <string name="sex_value">Value</string>
    <string name="calorie_goal">Calorie Goal</string>
    <string name="calorie_value">Value</string>

    <!-- Friend Profile Text -->
    <string name="username_placeholder">Username</string>

    <!-- Challenge Card -->
    <string name="challengeCardTitle">CHALLENGE</string>
    <string name="conditionTitleText">CONDITION</string>
    <string name="punishmentTitleText">PUNISHMENT</string>

</resources>