<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
												   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
												   android:layout_height="match_parent">
	<androidx.constraintlayout.widget.ConstraintLayout
			android:visibility="visible"
			android:layout_width="match_parent"
			android:layout_marginHorizontal="16dp"
			android:layout_height="392dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			android:background="#CDCDDC" android:id="@+id/cardView3">
		<TextView
				android:text="@string/challengeCardTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/challengeTitle"
				app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.072"/>
		<Button
				android:text="@string/buttonDecline"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/challengeDeclineButton"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
				app:layout_constraintTop_toBottomOf="@+id/challengeAcceptButton" app:layout_constraintVertical_bias="1.0"
				app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.178"/>
		<Button
				android:text="@string/buttonAccept"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/challengeAcceptButton"
				app:layout_constraintStart_toEndOf="@+id/challengeDeclineButton" app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.654"
				android:layout_marginBottom="16dp" app:layout_constraintTop_toBottomOf="@+id/challengeDeclineButton"
				app:layout_constraintVertical_bias="1.0"/>
		<TextView
				android:text="@string/body"
				android:textAlignment="center"
				android:layout_width="360dp"
				android:layout_height="wrap_content" android:id="@+id/challengeDescription"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.203"/>
		<TextView
				android:text="@string/conditionTitleText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/conditionTitle"
				app:layout_constraintStart_toStartOf="@+id/conditionText"
				app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintVertical_bias="0.396" app:layout_constraintEnd_toStartOf="@+id/divider"/>
		<TextView
				android:text="@string/punishmentTitleText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/punishmentTitle"
				app:layout_constraintStart_toEndOf="@+id/divider" app:layout_constraintEnd_toEndOf="@+id/punishmentText"
				app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintHorizontal_bias="0.671" app:layout_constraintVertical_bias="0.394"/>
		<View
				android:id="@+id/divider"
				android:layout_width="2.5dp"
				android:layout_height="200dp"
				android:background="?android:attr/listDivider"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintHorizontal_bias="0.5"
				app:layout_constraintVertical_bias="0.822" app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"/>
		<TextView
				android:text="@string/body"
				android:textAlignment="center"
				android:layout_width="166dp"
				android:layout_height="140dp" android:id="@+id/conditionText"
				app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintVertical_bias="0.714"
				app:layout_constraintHorizontal_bias="0.615" app:layout_constraintEnd_toEndOf="@+id/divider"/>
		<TextView
				android:text="@string/body"
				android:textAlignment="center"
				android:layout_width="166dp"
				android:layout_height="140dp" android:id="@+id/punishmentText"
				app:layout_constraintStart_toStartOf="@+id/divider" app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintVertical_bias="0.714"
				app:layout_constraintHorizontal_bias="0.333"
				app:layout_constraintEnd_toEndOf="parent"/>
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>