<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradients">


    <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:text="@string/sign_up_text"
            android:textSize="50sp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            style="@style/login_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
    <EditText
            android:id="@+id/name_input"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/name_input"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:background="@drawable/borders"
            android:padding="5dp"
            style="@style/login_text"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/textview_first"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            android:layout_marginTop="36dp" app:layout_constraintHorizontal_bias="0.495"/>
    <EditText
            android:id="@+id/email_input"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/email_input_text"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:background="@drawable/borders"
            android:padding="5dp"
            style="@style/login_text"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/textview_first"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            android:layout_marginTop="108dp" app:layout_constraintHorizontal_bias="0.495"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/email_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    <EditText
            android:id="@+id/password_input"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/password_input_text"
            android:autofillHints="emailAddress"
            android:inputType="textPassword"
            android:background="@drawable/borders"
            android:padding="5dp"
            style="@style/login_text"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/email_input"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            android:layout_marginTop="80dp" app:layout_constraintHorizontal_bias="0.504"/>
    <EditText
            android:id="@+id/reenter_password_input"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/reenter_password_input_text"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:background="@drawable/borders"
            android:padding="5dp"
            style="@style/login_text"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>